SDI–2021-1011-sesión8-Ejercicio-complementario2

--- a/views/bcancion.html
+++ b/views/bcancion.html
@@ -33,6 +33,7 @@
 				 <h4 class="media-heading">{{ comentario.autor }}</h4>
 				 {{ comentario.texto }}
 			 </div>
+			 <a href="/comentario/borrar/{{ comentario._id.toString() }}">Borrar</a>
 		 </div>
 		 {% endfor %}
 	 </div>
