--- a/views/btienda.html
+++ b/views/btienda.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block titulo %} Tienda – uoMusic {% endblock %}
 {% block contenido_principal %}
-<!-- Búsqueda -->
+
 <!-- Búsqueda -->
 <div class="row">
     <div id="custom-search-input ">
@@ -33,6 +33,7 @@
                 <div class="small">Autor: {{ cancion.autor }} </div>
                 <div class="text-right">{{ cancion.precio }} €</div>
             </a>
+            <a href="favoritos/add/{{ cancion._id.toString() }}">Añadir a favoritos</a>
         </div>
     </div>
     {% endfor %}
